Squashed commit of the following:
commit 7ce49a844608f22cdcdad9e142c8ea0a65b37996
Author: Gerald Haesendonck <gerald.haesendonck@ugent.be>
Date:   Tue Mar 8 16:58:43 2022 +0100

    Convert language level to 8